# blueqatSDK

./: .readthedocs.yml  README.md  RELEASE_NOTES_2.1.0.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
blueqat/: __init__.py  _version.py  circuit.py  cloud.py  decorators.py  gate.py  gateset.py  pauli.py  typing.py  utils.py  vqe.py
blueqat/backends/: __init__.py  backendbase.py  draw_backend.py  flexible_circuit_composer.py  qasm_output_backend.py  tn_draw_backend.py  torch_backend.py
blueqat/circuit_funcs/: __init__.py  circuit_to_unitary.py  flatten.py  json_serializer.py  qasm_parser.py
blueqat/eo/: __init__.py  encoding.py  optimizer.py  schedule.py  sequences.py  transpiler.py
blueqat/macros/: __init__.py
doc/: README.md
doc/source/: conf.py  getting_started.rst  index.rst
doc/source/api/: index.rst
doc/source/guide/: autograd.rst  backends.rst  circuits.rst  cloud.rst  exchange_only.rst
doc/source/ja/: getting_started.rst  index.rst
doc/source/ja/guide/: autograd.rst  backends.rst  circuits.rst  cloud.rst  exchange_only.rst
examples/: bell_state.py  exchange_only.py  grover_search.py  maxcut_qaoa.py  numpartition_qaoa.py  qft.py  teleportation.py  vqe_ground_state.py
tests/: conftest.py  test_1qdecompose.py  test_circuit.py  test_circuit_info.py  test_cloud.py  test_decorators.py  test_draw_backends.py  test_eo.py  test_gate_unitarity.py  test_gradient_correctness.py  test_imports.py  test_macros.py  test_pauli.py  test_quantum_standard.py  test_toqasm.py  test_torch_backend.py  test_vqe.py  test_vqe_energy.py
