[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueqat"
dynamic = ["version"]
description = "Quantum Computer Library for Everyone (PyTorch Native Edition)"
readme = "README.md"
authors = [
    { name = "The Blueqat Developers", email = "info@blueqat.com" }
]
license = { text = "Apache 2" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
]

# 👇 新生Blueqatの真の必須依存（PyTorchをコアに据える）
dependencies = [
    "torch>=2.0.0",      # 自動微分と複素数テンソル計算の核
    "opt-einsum>=3.3.0", # テンソルネットワークモードの高速化用
    "matplotlib>=3.5.1", # 回路図（DrawCircuit）の描画用
    "networkx>=2.6.3",   # グラフ構造の処理用
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",     # モダンなテスト環境
]

[project.urls]
Homepage = "https://github.com/Blueqat/Blueqat"

[tool.setuptools.dynamic]
version = { attr = "blueqat._version.__version__" }

[tool.setuptools]
packages = ["blueqat", "blueqat.backends", "blueqat.circuit_funcs", "blueqat.macros"]